--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "classnames": "^2.5.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^6.26.2",
     "saas": "^1.0.0"
   },
   "devDependencies": {
