--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@paypal/react-paypal-js": "^8.7.0",
     "aws-sdk": "^2.1691.0",
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
