--- a/server/package.json
+++ b/server/package.json
@@ -18,12 +18,13 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.6.2"
+    "mongoose": "^8.6.2",
+    "node-fetch": "^3.3.2"
   },
   "devDependencies": {
     "cross-env": "^7.0.3",
     "jest": "^29.7.0",
-    "nodemon": "^3.1.4",
+    "nodemon": "^3.1.7",
     "supertest": "^7.0.0"
   }
 }
